--- a/index.html
+++ b/index.html
@@ -6,15 +6,21 @@
     <title>Rosey </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
      <link rel="stylesheet" href="assets/css/style.css">
+     <link href="assets/css/all.min.css" rel="stylesheet"></link>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    
+   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand active" aria-current="page" href="index.html">Posey shop</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -33,34 +39,37 @@
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
-        </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div class="d-flex align-items-center gap-3 navContent">
+        <a href="Login.html" class="text-decoration-none">Login</a>
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      </div>
     </div>
   </div>
 </nav>
+
+</div>
     <header>
         <div class="headerContent">
             <h1>Welcome to Rosey shop!</h1>
-            <h2>Celebrate, surprise, or make memories we deliver flowers straight from your heart</h2>
+            <h2>Celebrate, surprise, or make memories we deliver flowers straight from your heart.</h2>
+            <button type="button" class="btn btn-outline-secondary">Shop now </button>
+
         </div>
+        <div>
      <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
   <div class="carousel-inner ">
+      <div class="carousel-item">
+        <img src="assets/images/firstCarousel.png" class="d-block w-100" alt="">
+      </div>
     <div class="carousel-item active">
-      <img src="assets/images/firstCarousel.png" class="d-block w-100" alt="">
+      <img src="assets/images/5carousel.jpg" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
-      <img src="assets/images/secondCarousel.jpg" class="d-block w-100" alt="">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/images/fourthCarousel.jpg" class="d-block w-100" alt="">
+      <img src="assets/images/6thcaroucel.jpg" class="d-block w-100" alt="">
     </div>
   </div>
+</div>
 </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
