--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,7 +15,7 @@
     </div>
    <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand active" aria-current="page" href="index.html">Posey shop</a>
+    <a class="navbar-brand" aria-current="page" href="index.html">Posey shop</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
+          <a class="nav-link active" aria-current="page" href="AboutUs.html">About us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
