--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
      <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
   <div class="carousel-inner ">
     <div class="carousel-item active">
-      <img src="assets/images/firstCarousel.png" class="d-block w-100" alt="">
+      <img src="assets/images/carousel3.jpeg" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
-        <img src="assets/images/5carousel.jpg" class="d-block w-100" alt="">
+        <img src="assets/images/5carousel.jpeg" class="d-block w-100" alt="">
       </div>
     <div class="carousel-item">
       <img src="assets/images/6thcaroucel.jpg" class="d-block w-100" alt="">
@@ -81,7 +81,7 @@
               <h2><i class="fa-solid fa-spa"></i> Flowers & Gifts For Every Occasion </h2>
           <div class="row gap-5"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="birthday.html">
            <img src="assets/images/BirgdayHeader.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Birthday </p>
@@ -89,7 +89,7 @@
            </a>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="thankYou.html">
            <img src="assets/images/thankyou.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Thank You </p>
@@ -97,7 +97,7 @@
            </a>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="friendShip.html">
            <img src="assets/images/frindship.png" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">FriendShip</p>
@@ -105,7 +105,7 @@
            </a>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
-              <a href="">
+              <a href="congratulations.html">
            <img src="assets/images/congrats.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Congratulations</p>
@@ -114,7 +114,7 @@
            </div>
           
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="bride.html">
            <img src="assets/images/bride.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Bride</p>
@@ -122,7 +122,7 @@
            </a>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="justBecause.html">
            <img src="assets/images/justBecause.png" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Just Because</p>
@@ -130,7 +130,7 @@
            </a>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="mother'sDay.html">
            <img src="assets/images/mothersday.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Mother's Day</p>
@@ -138,7 +138,7 @@
            </a>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-              <a href="">
+              <a href="artificalBlants.html">
            <img src="assets/images/plants.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
            <p class="card-text">Artifical Plants</p>
