add more html pager

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand active" aria-current="page" href="index.html">Posey shop</a>
 
@@ -30,7 +30,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="flowers.html">Flowers</a></li>
-            <li><a class="dropdown-item" href="gifts.html">Gifts</a></li>
+            <li><a class="dropdown-item" href="sales.html">Sales</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="plants.html">Plants</a></li>
           </ul>
@@ -39,13 +39,14 @@
           <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link " aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 
       <div class="d-flex align-items-center gap-3 navContent">
+        <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
       </div>
     </div>
   </div>
@@ -55,7 +56,7 @@
         <div class="headerContent">
             <h1>Welcome to Rosey shop!</h1>
             <h2>Celebrate, surprise, or make memories we deliver flowers straight from your heart.</h2>
-            <button type="button" class="btn btn-outline-secondary">Shop now </button>
+            <button type="button" ><a href="#section1">Shop now!</a></button>
 
         </div>
         <div>
@@ -161,12 +162,83 @@
               <div>
                 <h2><i class="fa-solid fa-spa"></i> Flower Subscriptions Starting at Just $60 With Free Shipping on Every Delivery.</h2>
                 <p>Keep the mood fresh with stunning bouquets, delivered right on time. Whether it's for you or someone else, it's the simplest way to turn a simple gesture into an ongoing experience.</p>
-               <button>Get Started</button>
+               <button type="button"><a href="#section1">Get Started</a></button>
               </div>
             </div>
           </div>
           </div>
           </section>
+          <section class="feedback">
+              <div class="container">
+              <h2><i class="fa-solid fa-spa"></i> Feedback</h2>
+              <div class="row ">
+                
+                  <div class=" card col-lg-3 col-md-5 col-sm-11 " >
+                  <div class="row gap-5">
+                  <div class="d-flex align-items-center justify-content-between">
+                  <div>
+           <img src="assets/images/review_1.png" alt=""></div>
+          <div ><i class="fa-solid fa-quote-right fi"></i>
+           </div>
+          </div>
+          </div>
+           <div class="card-body">
+            <h4>John</h4>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, reprehenderit vel incidunt obcaecati nulla magnam ab error ratione. Eum sapiente neque explicabo perferendis quidem architecto sunt dolorum itaque fugiat delectus.</p>
+            <div class="d-flex align-items-center justify-content-center">
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star-half-stroke"></i>
+        </div> 
+        </div>
+        </div>
+                  <div class=" card col-lg-3 col-md-5 col-sm-11 " >
+                  <div class="row gap-5">
+                  <div class="d-flex align-items-center justify-content-between">
+                  <div>
+           <img src="assets/images/review_3.png" alt=""></div>
+           <div ><i class="fa-solid fa-quote-right fi"></i>
+           </div>
+           </div>
+           </div>
+           <div class="card-body">
+            <h4>Steven</h4>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, reprehenderit vel incidunt obcaecati nulla magnam ab error ratione. Eum sapiente neque explicabo perferendis quidem architecto sunt dolorum itaque fugiat delectus.</p>
+            <div class="d-flex align-items-center justify-content-center">
+       <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star-half-stroke"></i>
+               </div> 
+                </div>
+                </div>
+                  <div class=" card col-lg-3 col-md-5 col-sm-11 " >
+                  <div class="row gap-5">
+                  <div class="d-flex align-items-center justify-content-between">
+                  <div>
+           <img src="assets/images/review_4.png" alt=""></div>
+          <div ><i class="fa-solid fa-quote-right fi"></i>
+               </div>
+                </div>
+               </div>
+           <div class="card-body">
+            <h4>Ann</h4>
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis, reprehenderit vel incidunt obcaecati nulla magnam ab error ratione. Eum sapiente neque explicabo perferendis quidem architecto sunt dolorum itaque fugiat delectus.</p>
+          <div class="d-flex align-items-center justify-content-center">
+       <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star-half-stroke"></i>
+    </div> 
+    </div>
+    </div>         
+    </div>
+    </div>
+    </section>
       
     </main>
    
@@ -180,21 +252,21 @@
       </div>
       </a>
       <p>One bouquet away from making them smile!</p>
-      <div><a href=""><i class="fa-brands fa-instagram"></i> <i class="fa-brands fa-facebook-f"></i> <i class="fa-brands fa-tiktok"></i> <i class="fa-brands fa-pinterest"></i></a></div>
+      <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i> </a><a href="https://www.tiktok.com/download"><i class="fa-brands fa-tiktok"></i></a> <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a></div>
     </div> 
     <div class="col-lg-2 col-md-5 col-sm-12"> 
     <ul>
       <li><p>Shop</p></li>
       <li><a href="flowers.html">FLowers</a></li>
       <li><a href="plants.html">plants</a></li>
-      <li><a href="gifts.html">Gifts</a></li>
+      <li><a href="sales.html">Sales</a></li>
     </ul>
     </div>
      <div class="col-lg-2 col-md-5 col-sm-12"> 
     <ul>
       <li><p>Help</p></li>
-      <li><a href="flowers.html">About</a></li>
-      <li><a href="plants.html">Contact</a></li>
+      <li><a href="AboutUs.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="">+970 567984321</a></li>
     </ul>
     </div>
