--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
      <link rel="stylesheet" href="assets/css/style.css">
@@ -36,83 +36,41 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="AboutUs.html">About us</a>
+          <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="contact.html">Contact</a>
+          <a class="nav-link " aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 
       <div class="d-flex align-items-center gap-3 navContent">
         <div>
-        <a href="Login.html" class="text-decoration-none">Login</a>
+        <a href="Login.html" class="text-decoration-none active" aria-current="page">Login</a>
         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
       </div>
     </div>
   </div>
 </nav>
 <main>
-    <section class="about">
-        <div class="container">
-            <div class="aboutContent">
-        <div class="row ">
-            <div class="col-lg-6">
-                <h2><i class="fas fa-users"></i> About Us</h2>
-                <p>We're making sending flowers a personalized, modern experience. UrbanStems is a seamless, one-of-a-kind flower delivery service that is helping to make anyone's day from coast to coast.</p>
-            </div>
-            <div class="col-lg-6">
-                <img src="assets/images/about1.jpeg" alt="">
-            </div>
-        </div>
-        </div>
-        </div>
-    </section>
-    <section class="about2">
-        <div class="container">
-            <div class="row gap-5">
-            <div class="col-lg-6 ">
-                <img src="assets/images/about2.svg" alt="">
-            </div>
-            <div class="col-lg-5 ">
-                <h2> A Modern Approach</h2>
-                <p>Our co-founders launched the company on Mother’s Day in 2014 in Palestine, driven by a passion for delivering flowers in a new and meaningful way. From the beginning, their focus was on freshness, sustainability, and exceptional customer service, aiming to revolutionize the flower delivery industry through a fully integrated supply chain.
-
-From next-day delivery across Palestine to same-day delivery in major cities like Jerusalem, Ramallah, Nablus, Bethlehem, and Hebron, we make gifting simple and seamless. Whether by bike or truck, every delivery is prepared with care—always keeping your happiness, and the joy of giving, at heart.
-
-</p>
-            </div>
-        </div>
-        </div>
-        </div>
-    </section>
-    <section class="about3">
-        <div class="container">
-            <h2> <i class="fa-solid fa-spa"></i> Why We're Different</h2>
-           <div class="row gap-3">
-            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-           <img src="assets/images/modernDesign.jpeg" class="card-img-top w-100 d-flex align-items-stretch" alt="">
-           <div class="card-body">
-           <p class="card-text">Modern Designs </p>
-           </div>
-           
-           </div>
-           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-           <img src="assets/images/giftSimplified.png" class="card-img-top w-100 d-flex align-items-stretch" alt="">
-           <div class="card-body">
-           <p class="card-text">Gifting Simplified </p>
-           </div>
-           
-           </div>
-           <div class=" card col-lg-3 col-md-5 col-sm-11  " >
-           <img src="assets/images/delivery.png" class="card-img-top w-100  d-flex align-items-stretch" alt="">
-           <div class="card-body">
-           <p class="card-text">Fast Delivery </p>
-           </div>
-
-           </div>
-           </div>
-        </div>
-    </section>
+<section class="login">
+   <h2>Login Or Create An Account</h2>
+   <div class="border border-2  col-lg-5 col-md-8  m-auto border-secondary-subtle mb-5 rounded-4 blur">
+      <h3 class="text-center mb-4 fw-bold">Welcome Back to Our Site!</h3>
+      <p class="text-center mb-4 fw-semibold">We've redesigned our site to make shopping with UrbanStems easier and more enjoyable!</p>
+      <p class="text-center mb-4 fw-normal">If you haven't logged in since November 6, 2024, please click the link below.</p>
+      <p class="text-center mb-4 text-decoration-underline "><a href="" class="text-primary-emphasis fw-lighter">Reactive</a></p>
+      <p class="text-center mb-4 text-decoration-underline "><a href="createAccount.html" class="text-primary-emphasis fw-normal">Create Account</a></p>
+   </div>
+   <div class="border border-2  col-lg-5 col-md-8  m-auto border-secondary-subtle mb-5 rounded-4 blur">
+    <form action="" class="">
+      <input type="email" placeholder="Email">
+      <div></div>
+      <input type="password" placeholder="Password" >
+           <div style="width: 349px;" class="d-flex justify-content-start align-items-center m-auto" ><small><a href="" class="text-primary-emphasis text-center mb-4  text-decoration-underline">Forget password?</a></small></div>
+      <div><input type="submit"></div>
+    </form>
+   </div>
+   </section>
 </main>
 <footer class="bg-body-tertiary">
   <div class="container">
