--- a/bride.html
+++ b/bride.html
@@ -13,9 +13,9 @@
      <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand active" aria-current="page" href="index.html">Posey shop</a>
+    <a class="navbar-brand " aria-current="page" href="index.html">Posey shop</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="flowers.html">Flowers</a></li>
-            <li><a class="dropdown-item" href="gifts.html">Gifts</a></li>
+            <li><a class="dropdown-item" href="sales.html">Sales</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="plants.html">Plants</a></li>
           </ul>
@@ -39,13 +39,14 @@
           <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link " aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 
       <div class="d-flex align-items-center gap-3 navContent">
+        <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
       </div>
     </div>
   </div>
@@ -199,21 +200,21 @@
       </div>
       </a>
       <p>One bouquet away from making them smile!</p>
-      <div><a href=""><i class="fa-brands fa-instagram"></i> <i class="fa-brands fa-facebook-f"></i> <i class="fa-brands fa-tiktok"></i> <i class="fa-brands fa-pinterest"></i></a></div>
+      <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i> </a><a href="https://www.tiktok.com/download"><i class="fa-brands fa-tiktok"></i></a> <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a></div>
     </div> 
     <div class="col-lg-2 col-md-5 col-sm-12"> 
     <ul>
       <li><p>Shop</p></li>
       <li><a href="flowers.html">FLowers</a></li>
       <li><a href="plants.html">plants</a></li>
-      <li><a href="gifts.html">Gifts</a></li>
+      <li><a href="sales.html">Sales</a></li>
     </ul>
     </div>
      <div class="col-lg-2 col-md-5 col-sm-12"> 
     <ul>
       <li><p>Help</p></li>
-      <li><a href="flowers.html">About</a></li>
-      <li><a href="plants.html">Contact</a></li>
+      <li><a href="AboutUs.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="">+970 567984321</a></li>
     </ul>
     </div>
