--- a/createAccount.html
+++ b/createAccount.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>Create Account</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
      <link href="assets/css/all.min.css" rel="stylesheet"></link>
      <link rel="stylesheet" href="assets/css/style.css">
@@ -13,7 +13,7 @@
      <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand " aria-current="page" href="index.html">Posey shop</a>
 
@@ -36,10 +36,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="AboutUs.html">About us</a>
+          <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="contact.html">Contact</a>
+          <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
 
@@ -51,68 +51,33 @@
     </div>
   </div>
 </nav>
-<main>
-    <section class="about">
-        <div class="container">
-            <div class="aboutContent">
-        <div class="row ">
-            <div class="col-lg-6">
-                <h2><i class="fas fa-users"></i> About Us</h2>
-                <p>We're making sending flowers a personalized, modern experience. UrbanStems is a seamless, one-of-a-kind flower delivery service that is helping to make anyone's day from coast to coast.</p>
-            </div>
-            <div class="col-lg-6">
-                <img src="assets/images/about1.jpeg" alt="">
-            </div>
-        </div>
-        </div>
-        </div>
-    </section>
-    <section class="about2">
-        <div class="container">
-            <div class="row gap-5">
-            <div class="col-lg-6 ">
-                <img src="assets/images/about2.svg" alt="">
-            </div>
-            <div class="col-lg-5 ">
-                <h2> A Modern Approach</h2>
-                <p>Our co-founders launched the company on Mother’s Day in 2014 in Palestine, driven by a passion for delivering flowers in a new and meaningful way. From the beginning, their focus was on freshness, sustainability, and exceptional customer service, aiming to revolutionize the flower delivery industry through a fully integrated supply chain.
-
-From next-day delivery across Palestine to same-day delivery in major cities like Jerusalem, Ramallah, Nablus, Bethlehem, and Hebron, we make gifting simple and seamless. Whether by bike or truck, every delivery is prepared with care—always keeping your happiness, and the joy of giving, at heart.
-
-</p>
-            </div>
-        </div>
-        </div>
-        </div>
-    </section>
-    <section class="about3">
-        <div class="container">
-            <h2> <i class="fa-solid fa-spa"></i> Why We're Different</h2>
-           <div class="row gap-3">
-            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-           <img src="assets/images/modernDesign.jpeg" class="card-img-top w-100 d-flex align-items-stretch" alt="">
-           <div class="card-body">
-           <p class="card-text">Modern Designs </p>
-           </div>
-           
-           </div>
-           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
-           <img src="assets/images/giftSimplified.png" class="card-img-top w-100 d-flex align-items-stretch" alt="">
-           <div class="card-body">
-           <p class="card-text">Gifting Simplified </p>
-           </div>
-           
-           </div>
-           <div class=" card col-lg-3 col-md-5 col-sm-11  " >
-           <img src="assets/images/delivery.png" class="card-img-top w-100  d-flex align-items-stretch" alt="">
-           <div class="card-body">
-           <p class="card-text">Fast Delivery </p>
-           </div>
-
-           </div>
-           </div>
-        </div>
-    </section>
+<section class="login">
+   <h2>Create An Account</h2>
+   <div class="border border-2 p-4 col-lg-6 col-md-8 m-auto border-secondary-subtle mb-5 rounded-4 blur">
+      <h3 class="text-center mb-4 fw-bold">Welcome to Our Site!</h3>
+      <p class="text-center mb-4 fw-semibold">We’re delighted to have you with us and wish you a wonderful shopping experience full of fragrance and </p>
+      <p class="text-center mb-4 fw-normal">Do you already have an account on our store?</p>
+      <p class="text-center mb-4 text-decoration-underline "><a href="Login.html" class="text-primary-emphasis fw-normal">Login</a></p>
+      <form action="" class=" p-4 m-auto border-secondary-subtle mb-5  rounded-4 blur">
+        <input type="text" placeholder="First Name" >
+        <input type="text" placeholder="Last Name">
+      <input type="email" placeholder="Your Email">
+      <input type="password" placeholder="Create Password">
+      <div class="d-flex align-items-center justify-content-evenly my-3">
+        <div>
+      <label name="gender" for="male">Male</label>
+       <input type="radio" name="gender" id="male">
+       </div>
+       <div>
+       <label for="female" >Female</label>
+       <input type="radio" name="gender" id="female">
+       </div>
+       </div>
+      <div><input type="submit"></div>
+    </form>
+   </div>
+   
+   </section>
 </main>
 <footer class="bg-body-tertiary">
   <div class="container">
