--- a/AboutUs.html
+++ b/AboutUs.html
@@ -43,7 +43,7 @@
         </li>
       </ul>
 
-      <div class="d-flex align-items-center gap-3 navContent">
+      <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
@@ -57,7 +57,7 @@
             <div class="aboutContent">
         <div class="row ">
             <div class="col-lg-6">
-                <h2><i class="fas fa-users"></i> About Us</h2>
+                <h2 ><i class="fas fa-users"></i> About Us</h2>
                 <p>We're making sending flowers a personalized, modern experience. UrbanStems is a seamless, one-of-a-kind flower delivery service that is helping to make anyone's day from coast to coast.</p>
             </div>
             <div class="col-lg-6">
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row gap-5">
             <div class="col-lg-6 ">
-                <img src="assets/images/about2.svg" alt="">
+                <img class="w-100" src="assets/images/about2.svg" alt="">
             </div>
             <div class="col-lg-5 ">
                 <h2> A Modern Approach</h2>
