--- a/bride.html
+++ b/bride.html
@@ -43,7 +43,7 @@
         </li>
       </ul>
 
-      <div class="d-flex align-items-center gap-3 navContent">
+      <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
@@ -53,7 +53,7 @@
 </nav>
 <header class="Birthday ">
     <div class="container">
-        <h2>Bride</h2>
+        <h2 class="advanceFont">Bride</h2>
         <p>Bridal bouquets that blend delicacy and elegance, thoughtfully crafted to complete the bride’s look and add unforgettable charm to the wedding moments</p>
     </div>
 </header>
