--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
      <link rel="stylesheet" href="assets/css/media.css">
 </head>
 <body>
-    <div class="announce">
-      <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
+    <div class="announce ">
+      <p >Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
      <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -42,11 +42,9 @@
           <a class="nav-link " aria-current="page" href="contact.html">Contact</a>
         </li>
       </ul>
-
-      <div class="d-flex align-items-center gap-3 navContent">
-        <div>
+        <div class="d-flex gap-4 navContent">
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
       </div>
     </div>
   </div>
@@ -80,7 +78,7 @@
       <section class="section1" id="section1">
           <div class="container">
               <h2><i class="fa-solid fa-spa"></i> Flowers & Gifts For Every Occasion </h2>
-          <div class="row gap-5"> 
+          <div class="row gap-lg-3 gap-md-2 gap-sm-1"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
               <a href="birthday.html">
            <img src="assets/images/BirgdayHeader.jpeg" class="card-img-top w-100 " alt="">
@@ -239,9 +237,7 @@
     </div>
     </div>
     </section>
-      
     </main>
-   
 <footer class="bg-body-tertiary">
   <div class="container">
   <div class="row gap-5">
