--- a/sales.html
+++ b/sales.html
@@ -53,7 +53,7 @@
 </nav>
 <header class="Birthday thankyou">
     <div class="container">
-        <h2>Sales!</h2>
+        <h2 class="advanceFont ">Sales!</h2>
         <p>Don’t miss out! Enjoy amazing discounts of up to 10% on a wide range of products during our seasonal sale, available only until the end of the week.</p>
     </div>
 </header>
