--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         </li>
       </ul>
 
-      <div class="d-flex align-items-center gap-3 navContent">
+      <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="assets/images/contact.png" alt="">
+                <img  class="h-100" src="assets/images/contact.png" alt="">
             </div>
         </div>
     </section>
