--- a/flowers.html
+++ b/flowers.html
@@ -43,7 +43,7 @@
         </li>
       </ul>
 
-      <div class="d-flex align-items-center gap-3 navContent">
+      <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
         <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
