edditing cards+adding new pages

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -88,7 +88,7 @@ From next-day delivery across Palestine to same-day delivery in major cities lik
     <section class="about3">
         <div class="container">
             <h2> <i class="fa-solid fa-spa"></i> Why We're Different</h2>
-           <div class="row gap-3">
+           <div class="row gap-3 justify-content-center">
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
            <img src="assets/images/modernDesign.jpeg" class="card-img-top w-100 d-flex align-items-stretch" alt="">
            <div class="card-body">
