--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
   <div class="carousel-inner ">
     <div class="carousel-item active">
-      <img src="assets/images/carousel3.jpeg" class="d-block w-100" alt="">
+      <img src="assets/images/back2.jpeg" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
         <img src="assets/images/5carousel.jpeg" class="d-block w-100" alt="">
@@ -75,10 +75,10 @@
     </header>
     <main>
 
-      <section class="section1" id="section1">
+      <section class="section1 " id="section1">
           <div class="container">
               <h2><i class="fa-solid fa-spa"></i> Flowers & Gifts For Every Occasion </h2>
-          <div class="row gap-lg-3 gap-md-2 gap-sm-1"> 
+          <div class="row gap-5 justify-content-center"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
               <a href="birthday.html">
            <img src="assets/images/BirgdayHeader.jpeg" class="card-img-top w-100 " alt="">
@@ -150,7 +150,7 @@
           </section>
           <section class="section2">
             <div class="container">
-          <div class="row gap-5">
+          <div class="row gap-5 justify-content-center">
             <div class="col-lg-6 ">
                 <video controls autoplay muted > 
               <source src="assets/video/Free Flower Shop Promo Video Template (Customizable) - FlexClip.mp4" type="video/mp4">
@@ -169,7 +169,7 @@
           <section class="feedback">
               <div class="container">
               <h2><i class="fa-solid fa-spa"></i> Feedback</h2>
-              <div class="row ">
+              <div class="row justify-content-center">
                 
                   <div class=" card col-lg-3 col-md-5 col-sm-11 " >
                   <div class="row gap-5">
