--- a/artificalBlants.html
+++ b/artificalBlants.html
@@ -60,7 +60,7 @@
 <main>
     <section class="categories">
         <div class="container">
-            <div class="row gap-2">
+            <div class="row gap-2 justify-content-center">
             <div class=" col-lg-2 col-md-5">
                 <p> <i class="fa-solid fa-filter"></i> Filter</p>
             </div>
@@ -104,9 +104,12 @@
               </div>
     </section>
     <section class="cards">
+        <img class="backgroundImg4" src="assets/images/flowerBackground2.png" alt="">
+        <img class="backgroundImg5" src="assets/images/petals (1).png" alt="">
+
      <div class="container">
        
-             <div class="row gap-5"> 
+             <div class="row gap-5 justify-content-center"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
            <img src="assets/images/ab1.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
