--- a/bride.html
+++ b/bride.html
@@ -60,7 +60,7 @@
 <main>
     <section class="categories">
         <div class="container">
-            <div class="row gap-2">
+            <div class="row gap-2 justify-content-center">
             <div class=" col-lg-2 col-md-5">
                 <p> <i class="fa-solid fa-filter"></i> Filter</p>
             </div>
@@ -106,7 +106,7 @@
     <section class="cards">
      <div class="container">
        
-             <div class="row gap-5"> 
+             <div class="row gap-5 justify-content-center"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
            <img src="assets/images/bd1.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
