--- a/sales.html
+++ b/sales.html
@@ -60,7 +60,7 @@
 <main>
     <section class="categories">
         <div class="container">
-            <div class="row gap-2">
+            <div class="row gap-2 justify-content-center">
             <div class=" col-lg-2 col-md-5">
                 <p> <i class="fa-solid fa-filter"></i> Filter</p>
             </div>
@@ -106,7 +106,7 @@
     <section class="cards sale">
      <div class="container">
        
-             <div class="row gap-5"> 
+             <div class="row gap-5 justify-content-center"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
             <span class="position-absolute top-4 start-7 translate-middle badge rounded-pill  position-relative "> New to sale!<span class="visually-hidden">unread messages</span>
              </span>
