--- a/thankYou.html
+++ b/thankYou.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" href="assets/css/style.css">
      <link rel="stylesheet" href="assets/css/media.css">
 </head>
-<body>
+<body >
      <div class="announce">
       <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
     </div>
@@ -58,9 +58,9 @@
     </div>
 </header>
 <main>
-    <section class="categories">
+    <section class="categories ">
         <div class="container">
-            <div class="row gap-2">
+            <div class="row gap-2 justify-content-center">
             <div class=" col-lg-2 col-md-5">
                 <p> <i class="fa-solid fa-filter"></i> Filter</p>
             </div>
@@ -104,9 +104,9 @@
               </div>
     </section>
     <section class="cards">
-     <div class="container">
+     <div class="container ">
        
-             <div class="row gap-5"> 
+             <div class="row gap-5 justify-content-center"> 
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
            <img src="assets/images/thank1.jpeg" class="card-img-top w-100 " alt="">
            <div class="card-body">
