add card buttons

--- a/congratulations.html
+++ b/congratulations.html
@@ -112,7 +112,7 @@
            <div class="card-body">
            <p class="card-text">The Royal </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>170$</ins></p>
+           <p><ins>170$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -121,7 +121,7 @@
            <div class="card-body">
            <p class="card-text">The Verona</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>180$</ins></p>
+           <p><ins>180$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -130,7 +130,7 @@
            <div class="card-body">
            <p class="card-text">The Firecrackerr </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>70$</ins></p>
+           <p><ins>70$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
@@ -139,7 +139,7 @@
            <div class="card-body">
            <p class="card-text">Double The Peace </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>84$</ins></p>
+           <p><ins>84$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -147,7 +147,7 @@
            <div class="card-body">
            <p class="card-text">Double The Unicorn</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>50$</ins></p>
+           <p><ins>50$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -156,7 +156,7 @@
            <div class="card-body">
            <p class="card-text">The Peace</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>67$</ins></p>
+           <p><ins>67$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -165,7 +165,7 @@
            <div class="card-body">
            <p class="card-text"> Wrapped Flower </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>96$</ins></p>
+           <p><ins>96$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -174,7 +174,7 @@
            <div class="card-body">
            <p class="card-text">Double Wrapped Rose</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>100$</ins></p>
+           <p><ins>100$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -183,7 +183,7 @@
            <div class="card-body">
            <p class="card-text">Senior Flower</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>200$</ins></p>
+           <p><ins>200$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
