--- a/plants.html
+++ b/plants.html
@@ -112,7 +112,7 @@
            <div class="card-body">
            <p class="card-text"> Nature Pulse</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>500$</ins></p>
+           <p><ins>500$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -121,7 +121,7 @@
            <div class="card-body">
            <p class="card-text">EverGreen</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>450$</ins></p>
+           <p><ins>450$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -130,7 +130,7 @@
            <div class="card-body">
            <p class="card-text">Timeless Beauty</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>470$</ins></p>
+           <p><ins>470$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
@@ -139,7 +139,7 @@
            <div class="card-body">
            <p class="card-text"> Home Oasis</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>350$</ins></p>
+           <p><ins>350$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -147,7 +147,7 @@
            <div class="card-body">
            <p class="card-text">Warmth Tree</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>465$</ins></p>
+           <p><ins>465$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -156,7 +156,7 @@
            <div class="card-body">
            <p class="card-text"> Calm Breath</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>345$</ins></p>
+           <p><ins>345$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -165,7 +165,7 @@
            <div class="card-body">
            <p class="card-text">  Green Allure </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>460$</ins></p>
+           <p><ins>460$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -174,7 +174,7 @@
            <div class="card-body">
            <p class="card-text"> Plant Delight</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>555$</ins></p>
+           <p><ins>555$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -183,7 +183,7 @@
            <div class="card-body">
            <p class="card-text"> Branch of Life</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>456$</ins></p>
+           <p><ins>456$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -193,7 +193,8 @@
            <div class="card-body">
            <p class="card-text">Evergreen Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><del>40$</del><sub><ins>20$</ins></sub></p>
+           <p><del>40$</del><sub><ins>20$</ins></sub> </p>
+           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -204,6 +205,7 @@
            <p class="card-text">Artificial Beauty, Authentic Savings </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>150$</del><sub><ins>125$</ins></sub></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -214,6 +216,7 @@
            <p class="card-text">Green Vibes, Great Deals </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>200$</del><sub><ins>145$</ins></sub></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
           <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -224,6 +227,7 @@
            <p class="card-text">Style that Stays, Prices that Drop </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
            <p><del>10$</del><sub><ins>5$</ins></sub></p>
+           <p> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
