--- a/mother'sDay.html
+++ b/mother'sDay.html
@@ -112,7 +112,8 @@
            <div class="card-body">
            <p class="card-text"> Heartbeat</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>30$</ins></p>
+           <p ><ins>30$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -121,7 +122,7 @@
            <div class="card-body">
            <p class="card-text">My First Love</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>65$</ins></p>
+           <p><ins>65$</ins>  <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -130,7 +131,7 @@
            <div class="card-body">
            <p class="card-text">All My Love</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>55$</ins></p>
+           <p><ins>55$</ins>  <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
@@ -139,7 +140,7 @@
            <div class="card-body">
            <p class="card-text"> My Most Beautiful Flower</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>60$</ins></p>
+           <p><ins>60$</ins>  <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -147,7 +148,7 @@
            <div class="card-body">
            <p class="card-text">Light of Home</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>45$</ins></p>
+           <p><ins>45$</ins>  <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -156,7 +157,7 @@
            <div class="card-body">
            <p class="card-text"> A Message of Love</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>100$</ins></p>
+           <p><ins>100$</ins>  <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -165,7 +166,7 @@
            <div class="card-body">
            <p class="card-text">  Bloom of Life </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>105$</ins></p>
+           <p><ins>105$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -174,7 +175,7 @@
            <div class="card-body">
            <p class="card-text"> Just for You</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>70$</ins></p>
+           <p><ins>70$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -183,7 +184,7 @@
            <div class="card-body">
            <p class="card-text"> Floral Embrace</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>93$</ins></p>
+           <p><ins>93$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
