--- a/artificalBlants.html
+++ b/artificalBlants.html
@@ -46,7 +46,9 @@
       <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+         <a href="cart.html" class="position-relative"><i class="fa-solid fa-cart-shopping "></i>           
+        <span id="counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark " style="padding:1px 2px ;">0</span>
+     </a></div>
       </div>
     </div>
   </div>
@@ -115,7 +117,7 @@
            <div class="card-body">
            <p class="card-text"> Nature Pulse</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>500$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>500$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -124,7 +126,7 @@
            <div class="card-body">
            <p class="card-text">EverGreen</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>450$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>450$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -133,7 +135,7 @@
            <div class="card-body">
            <p class="card-text">Timeless Beauty</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>470$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>470$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
@@ -142,7 +144,7 @@
            <div class="card-body">
            <p class="card-text"> Home Oasis</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>350$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>350$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -150,7 +152,7 @@
            <div class="card-body">
            <p class="card-text">Warmth Tree</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>465$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>465$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -159,7 +161,7 @@
            <div class="card-body">
            <p class="card-text"> Calm Breath</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>345$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>345$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -168,7 +170,7 @@
            <div class="card-body">
            <p class="card-text">  Green Allure </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>460$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>460$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -177,7 +179,7 @@
            <div class="card-body">
            <p class="card-text"> Plant Delight</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>555$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>555$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -186,7 +188,7 @@
            <div class="card-body">
            <p class="card-text"> Branch of Life</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>456$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>456$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
@@ -231,6 +233,8 @@
     </div>
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
+
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
