--- a/cart.html
+++ b/cart.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link href="assets/css/all.min.css" rel="stylesheet"></link>
+     <link rel="stylesheet" href="assets/css/style.css">
+     <link rel="stylesheet" href="assets/css/media.css">
+    <title>Cart</title>
 </head>
 <body>
-    
+      <div class="announce">
+      <p>Last Chance For Mother's Day Delivery - Order By Friday At 4PM ! <a href="mother'sDay.html">Shop Now!</a></p>
+    </div>
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand " aria-current="page" href="index.html">Posey shop</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-items-center">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Shop
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="flowers.html">Flowers</a></li>
+            <li><a class="dropdown-item" href="sales.html">Sales</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="plants.html">Plants</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="AboutUs.html">About us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
+        </li>
+      </ul>
+
+      <div class="d-flex gap-4 navContent">
+        <div>
+        <a href="Login.html" class="text-decoration-none">Login</a>
+        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+      </div>
+    </div>
+  </div>
+</nav>
+    <main>
+
+    </main>
+    <footer class="bg-body-tertiary">
+  <div class="container">
+  <div class="row gap-5">
+    <div class="col-lg-3 col-md-5 col-sm-12 ">
+      <a href="index.html">
+      <div class="imgFooter">
+        <img src="assets/images/RoseyIcon.jpeg" alt="">
+      </div>
+      </a>
+      <p>One bouquet away from making them smile!</p>
+      <div><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i> </a><a href="https://www.tiktok.com/download"><i class="fa-brands fa-tiktok"></i></a> <a href="https://www.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a></div>
+    </div> 
+    <div class="col-lg-2 col-md-5 col-sm-12"> 
+    <ul>
+      <li><p>Shop</p></li>
+      <li><a href="flowers.html">FLowers</a></li>
+      <li><a href="plants.html">plants</a></li>
+      <li><a href="sales.html">Sales</a></li>
+    </ul>
+    </div>
+     <div class="col-lg-2 col-md-5 col-sm-12"> 
+    <ul>
+      <li><p>Help</p></li>
+      <li><a href="AboutUs.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="">+970 567984321</a></li>
+    </ul>
+    </div>
+    <div class="col-lg-3 col-md-5 col-sm-12"> 
+      <form action="">
+      <label for="email">Subscribe For 20% Off, Early Access To Limited Edition Stems, & Useful Care Tips</label>
+      <input type="Email" id="email" placeholder="Your email">
+      <input type="Submit">
+     </form>
+    </div>
+    </div>
+    <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
+</footer>
 </body>
 </html>
