--- a/friendShip.html
+++ b/friendShip.html
@@ -46,7 +46,9 @@
       <div class="d-flex gap-4 navContent">
         <div>
         <a href="Login.html" class="text-decoration-none">Login</a>
-        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
+        <a href="cart.html" class="position-relative"><i class="fa-solid fa-cart-shopping "></i>           
+        <span id="counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-dark " style="padding:1px 2px ;">0</span>
+     </a></div>
       </div>
     </div>
   </div>
@@ -112,7 +114,7 @@
            <div class="card-body">
            <p class="card-text">The Birdsong </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>75$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>75$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -121,7 +123,7 @@
            <div class="card-body">
            <p class="card-text">The Glamour </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>90$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>90$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
              <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -130,7 +132,7 @@
            <div class="card-body">
            <p class="card-text">Floral Essence </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>30$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>30$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 ">
@@ -139,7 +141,7 @@
            <div class="card-body">
            <p class="card-text">Rose Harmony </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>76$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>76$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -147,7 +149,7 @@
            <div class="card-body">
            <p class="card-text">Hearts & Flowers </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i></p>
-           <p><ins>25$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>25$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -156,7 +158,7 @@
            <div class="card-body">
            <p class="card-text">Golden Petals</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>47$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>47$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -165,7 +167,7 @@
            <div class="card-body">
            <p class="card-text">Bloom & Grace</p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>20$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>20$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
             <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -174,7 +176,7 @@
            <div class="card-body">
            <p class="card-text">The Scented Garden </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i></p>
-           <p><ins>64$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>64$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
            <div class=" card col-lg-3 col-md-5 col-sm-11 " >
@@ -183,7 +185,7 @@
            <div class="card-body">
            <p class="card-text">Petal Whisper </p>
            <p><i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star"></i> <i class="fa-solid fa-star-half-stroke"></i> <i class="fa-regular fa-star"></i></p>
-           <p><ins>30$</ins> <button class="d-inline border border-0 bg-body mx-3"><i class="fa-solid fa-bag-shopping "></i></button></p>
+           <p><ins>30$</ins> <button class="d-inline border border-0 bg-body mx-3 cartButton"><i class="fa-solid fa-bag-shopping "></i></button></p>
            </div>
            </div>
      </div>
@@ -229,5 +231,6 @@
     <div class="copyRight">	&copy; 2025 PoseyShop copyRight</div>
 </footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
